Fix the alignment of the Under Construction page

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -361,9 +361,8 @@ h1, h2, h3, h4, h5, h6 {
     background-image: url('../img/yt-logo.png');
 }
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.page__construction {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
